--- a/Evaluation_OOD.ipynb
+++ b/Evaluation_OOD.ipynb
@@ -31,12 +31,12 @@
    },
    "outputs": [],
    "source": [
-    "# Retrieve the pre-trained ResNet20 model.\n",
-    "# Refer to this notebook for details: https://git.io/JOJuL.\n",
-    "!/home/jupyter/.local/bin/gdown --id 1-6Xp7__VMJeMBtGMByI7_GYVeIIv-1Ay \n",
-    "!/home/jupyter/.local/bin/gdown --id 1y5WfyzQ0uxvEfkjdJb4mr5nYT0ItdoIL \n",
-    "!tar xf odin_rn_model.tar.gz\n",
-    "!tar xf rn_baseline_model.tar.gz"
+    "# # Retrieve the pre-trained ResNet20 model.\n",
+    "# # Refer to this notebook for details: https://git.io/JOJuL.\n",
+    "# !/home/jupyter/.local/bin/gdown --id 1-6Xp7__VMJeMBtGMByI7_GYVeIIv-1Ay \n",
+    "# !/home/jupyter/.local/bin/gdown --id 1y5WfyzQ0uxvEfkjdJb4mr5nYT0ItdoIL \n",
+    "# !tar xf odin_rn_model.tar.gz\n",
+    "# !tar xf rn_baseline_model.tar.gz"
    ]
   },
   {
@@ -254,7 +254,7 @@
    "source": [
     "## Perturbing utility\n",
     "\n",
-    "As per equation 9 of the paper, we will be perturbing the input images with $\\epsilon$ which was calculated in [this notebook](https://git.io/JOTgx). The value we derived is **0.08**. "
+    "As per equation 9 of the paper, we will be perturbing the input images with $\\epsilon$ which was calculated in [this notebook](https://git.io/JOTgx). The value we derived is **0.04**. "
    ]
   },
   {
@@ -265,7 +265,7 @@
    },
    "outputs": [],
    "source": [
-    "def perturb_images(images, model, epsilon=0.08):\n",
+    "def perturb_images(images, model, epsilon=0.04):\n",
     "\n",
     "    test_ds_var = tf.Variable(images, trainable=True)\n",
     "\n",
@@ -280,11 +280,12 @@
     "    gradients = tape.gradient(loss, test_ds_var)\n",
     "    gradients = tf.math.greater_equal(gradients, 0)\n",
     "    gradients = tf.cast(gradients, tf.float32)\n",
+    "    gradients = (gradients - 0.5) * 2\n",
     "\n",
     "    # Perturb the inputs and derive new mean score.\n",
     "    # test_ds_var.assign_add(epsilon * gradients)\n",
     "    static_tensor = tf.convert_to_tensor(test_ds_var)\n",
-    "    static_tensor = static_tensor + epsilon + gradients\n",
+    "    static_tensor = static_tensor - epsilon * gradients\n",
     "    static_tensor = tf.clip_by_value(static_tensor, 0., 255.)\n",
     "    \n",
     "    return static_tensor"
@@ -296,16 +297,16 @@
     "id": "Ua1UDZojp8PU"
    },
    "source": [
-    "## Model evalution with AUROC\n",
+    "## Model evalution with AUROC & TNR@TPR95\n",
     "\n",
-    "The authors use two metrics for evaluation -- **AUROC** & **TNR@TPR95**. In this notebook, we will only use AUROC. \n",
+    "The authors use two metrics for evaluation -- **AUROC** & **TNR@TPR95**. \n",
     "\n",
     "Here are the steps we will roughly be following:\n",
     "\n",
     "1. Perturb the images using `perturb_images()`. For this, we will be using `scorer`. \n",
     "2. Pass those images to `model` to obtain predictions. From the paper - \"At testing time, the class prediction can be made by either calculating $\\arg \\max _{i} f_{i}(\\boldsymbol{x})$ or\n",
     "$\\arg \\max _{i} h_{i}(\\boldsymbol{x})$ (both will give the same predictions).\"\n",
-    "3. Use the original labels of the dataset under evaluation and the prediction scores from (2) and calculate the AUROC. \n",
+    "3. Use the original labels of the dataset under evaluation and the prediction scores from (2) and calculate the metrics. \n",
     "\n",
     "For evaluating the baseline model, we won't be adding perturbations. "
    ]
@@ -340,7 +341,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75a10f80024c4a8f8a18e9e5e0202a72",
+       "model_id": "27ebbdc62de84d708fa25185b19b479b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -354,7 +355,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "72874f0b7e7142d7ab6e08c25f6ebb1d",
+       "model_id": "d0578b19efd143959e95d922ab194d08",
        "version_major": 2,
        "version_minor": 0
       },
@@ -384,65 +385,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.792900278716793\n"
+      "{'generalized_odin': {'TNR': 0.5418715427166565, 'AUROC': 0.9215311326230964}}\n"
      ]
     }
    ],
    "source": [
     "# Calculate AUROC.\n",
-    "print(metrics.calculate_auroc(pertubed_cifar10, perturbed_svhn, rn_odin_model, type=\"odin\"))"
+    "print(metrics.metric(pertubed_cifar10, perturbed_svhn, rn_odin_model, stype=\"generalized_odin\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9154817660315508\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Baseline AUROC.\n",
-    "# We are not adding any perturbation since the magnitude does not hold \n",
-    "# for our baseline model.\n",
-    "svhn_test = svhn_test.batch(BATCH_SIZE)\n",
-    "\n",
-    "ds = tf.data.Dataset.from_tensor_slices((x_test, y_test))\n",
-    "cifar10_test = ds.skip(1000).take(len(x_test) - 1000)\n",
-    "cifar10_test = cifar10_test.batch(BATCH_SIZE)\n",
-    "\n",
-    "print(metrics.calculate_auroc(cifar10_test, svhn_test, rn_baseline_model, type=\"baseline\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.8830217040565458\n"
+      "{'baseline': {'TNR': 0.4053088506453596, 'AUROC': 0.9114120185412826}}\n"
      ]
     }
    ],
    "source": [
     "# Baseline AUROC (with perturbation).\n",
     "cifar10_test = pertubed_cifar10.batch(BATCH_SIZE)\n",
-    "print(metrics.calculate_auroc(pertubed_cifar10, perturbed_svhn, rn_baseline_model, type=\"baseline\"))"
+    "print(metrics.metric(pertubed_cifar10, perturbed_svhn, rn_baseline_model, stype=\"baseline\"))"
    ]
   }
  ],
