--- a/Baseline.ipynb
+++ b/Baseline.ipynb
@@ -31,22 +31,9 @@
    },
    "outputs": [],
    "source": [
-    "# import os\n",
-    "# import urllib\n",
-    "# from getpass import getpass\n",
-    "\n",
-    "# user = input('User name: ')\n",
-    "# password = getpass('Password: ')\n",
-    "# password = urllib.parse.quote(password)\n",
-    "# repo_address = input('Repo Address: ')\n",
-    "# branch_name = input('Branch name: ')\n",
-    "\n",
-    "# cmd_string = 'git clone https://{}:{}@github.com/{}.git -b {}'.format(\n",
-    "#     user, password, repo_address, branch_name\n",
-    "# )\n",
-    "\n",
-    "# os.system(cmd_string)\n",
-    "# cmd_string, password = \"\", \"\""
+    "# Grab the initial model weights\n",
+    "!wget -q https://github.com/sayakpaul/Generalized-ODIN-TF/releases/download/v1.0.0/models.tar.gz\n",
+    "!untar xf models.tar.gz"
    ]
   },
   {
@@ -1127,7 +1114,7 @@
    "include_colab_link": true,
    "machine_shape": "hm",
    "mount_file_id": "https://github.com/sayakpaul/Generalized-ODIN-TF/blob/main/Generalized_ODIN.ipynb",
-   "name": "Generalized_ODIN.ipynb",
+   "name": "Baseline.ipynb",
    "provenance": [],
    "toc_visible": true
   },
@@ -1151,7 +1138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
