--- a/Evaluation_OOD.ipynb
+++ b/Evaluation_OOD.ipynb
@@ -31,12 +31,9 @@
    },
    "outputs": [],
    "source": [
-    "# # Retrieve the pre-trained ResNet20 model.\n",
-    "# # Refer to this notebook for details: https://git.io/JOJuL.\n",
-    "# !/home/jupyter/.local/bin/gdown --id 1-6Xp7__VMJeMBtGMByI7_GYVeIIv-1Ay \n",
-    "# !/home/jupyter/.local/bin/gdown --id 1y5WfyzQ0uxvEfkjdJb4mr5nYT0ItdoIL \n",
-    "# !tar xf odin_rn_model.tar.gz\n",
-    "# !tar xf rn_baseline_model.tar.gz"
+    "# Grab the initial model weights\n",
+    "!wget -q https://github.com/sayakpaul/Generalized-ODIN-TF/releases/download/v1.0.0/models.tar.gz\n",
+    "!untar xf models.tar.gz"
    ]
   },
   {
@@ -450,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
