--- a/Generalized_ODIN.ipynb
+++ b/Generalized_ODIN.ipynb
@@ -31,32 +31,9 @@
    },
    "outputs": [],
    "source": [
-    "# import os\n",
-    "# import urllib\n",
-    "# from getpass import getpass\n",
-    "\n",
-    "# user = input('User name: ')\n",
-    "# password = getpass('Password: ')\n",
-    "# password = urllib.parse.quote(password)\n",
-    "# repo_address = input('Repo Address: ')\n",
-    "# branch_name = input('Branch name: ')\n",
-    "\n",
-    "# cmd_string = 'git clone https://{}:{}@github.com/{}.git -b {}'.format(\n",
-    "#     user, password, repo_address, branch_name\n",
-    "# )\n",
-    "\n",
-    "# os.system(cmd_string)\n",
-    "# cmd_string, password = \"\", \"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !/home/jupyter/.local/bin/gdown --id 1ap08uSszQFKu972dv0B8Bo7FjI6IMKnD\n",
-    "# !tar xf initial_model.tar.gz"
+    "# Grab the initial model weights\n",
+    "!wget -q https://github.com/sayakpaul/Generalized-ODIN-TF/releases/download/v1.0.0/models.tar.gz\n",
+    "!untar xf models.tar.gz"
    ]
   },
   {
@@ -1232,7 +1209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
