--- a/Calculate_Epsilon.ipynb
+++ b/Calculate_Epsilon.ipynb
@@ -31,10 +31,9 @@
    },
    "outputs": [],
    "source": [
-    "# # Retrieve the pre-trained ResNet20 model.\n",
-    "# # Refer to this notebook for details: https://git.io/JOJuL.\n",
-    "# !gdown --id 1-6Xp7__VMJeMBtGMByI7_GYVeIIv-1Ay -O odin_rn_model.tar.gz\n",
-    "# !tar xf odin_rn_model.tar.gz"
+    "# Grab the initial model weights\n",
+    "!wget -q https://github.com/sayakpaul/Generalized-ODIN-TF/releases/download/v1.0.0/models.tar.gz\n",
+    "!untar xf models.tar.gz"
    ]
   },
   {
@@ -317,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
