--- a/Generalized_ODIN.ipynb
+++ b/Generalized_ODIN.ipynb
@@ -62,7 +62,7 @@
       "source": [
         "# Grab the initial model weights\n",
         "!wget -q https://github.com/sayakpaul/Generalized-ODIN-TF/releases/download/v1.0.0/models.tar.gz\n",
-        "!untar xf models.tar.gz"
+        "!tar xf models.tar.gz"
       ],
       "execution_count": null,
       "outputs": []
